Fixes - Make changes to avoid output statistics overlapping. - Some style simplifications. - Do not break auto-minify label. - Firefox does not behave nice with 'word-wrap: break-word'.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .hidden {
 	display: none;
 }
+.invisible {
+	visibility: hidden;
+}
 
 html, body {
 	height: 100%;
@@ -8,10 +11,6 @@ html, body {
 	min-height: 18em;
 	padding: 0;
 	font: 100%/1.5 Arial, sans-serif;
-}
-
-.header {
-	min-height: 4em;
 }
 
 h1 {
@@ -22,22 +21,19 @@ h1 {
 
 .col {
 	float: left;
-	height: 100%;
-	margin-top: -4em;
+	height: 26em;
+	height: -webkit-calc( 100% - 9em );
+	height: calc( 100% - 9em );
 	width: 50%;
 }
 
 .in-container, #out-container {
 	position: relative;
-	height: 26em;
-	height: -moz-calc( 100% - 9em );
-	height: -webkit-calc( 100% - 9em );
-	height: calc( 100% - 9em );
+	height: 100%;
 	margin-bottom: 0.25em;
 }
 
 .in-container, #info, #out-container, #error-container {
-	margin-top: 5em;
 	margin-left: 1em;
 }
 
@@ -45,14 +41,13 @@ h1 {
 	margin-right: 1em;
 }
 
-#out-container p {
-	position: absolute;
-	top: -2em;
-	margin: 0;
+#out-stats {
+	text-align: right;
+	margin: 0 1em;
 }
 
 #in, #options, #out {
-	height: 99%;
+	height: 100%;
 	width: 100%;
 	box-sizing: -moz-border-box;
 	box-sizing: border-box;
@@ -79,15 +74,19 @@ textarea {
     display: block;
 }
 
+#options-auto-wrapper {
+	white-space: nowrap;
+}
+
 pre {
-	word-wrap: break-word;
-	overflow-wrap: break-word;
+	white-space: pre-wrap;
 }
 
 #error {
 	background: #fff0f0;
 	border-left: 0.5em solid #c00;
 	padding: 0.5em 0.5em 0.5em 1em;
+	margin: 0;
 }
 
 mark {
